<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Login View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="LoginViewController" customModule="RxCode" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rJy-I5-ThG">
                                <rect key="frame" x="40" y="167" width="335" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="loginText"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TAH-5n-Inw">
                                <rect key="frame" x="143.5" y="349" width="128" height="41"/>
                                <color key="backgroundColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="loginButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="41" id="8Dd-ft-uBw"/>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="128" id="TT7-N0-CjS"/>
                                </constraints>
                                <state key="normal" title="Login">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="buttonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Wox-EY-FEQ"/>
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mV2-uO-dre">
                                <rect key="frame" x="40" y="229" width="335" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="passwordText"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mdl-Sy-ezF">
                                <rect key="frame" x="345" y="44" width="30" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="ChangeLocaleButton"/>
                                <state key="normal" title="EN"/>
                                <connections>
                                    <action selector="buttonChangeLangTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ipK-K7-fhB"/>
                                </connections>
                            </button>
                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="973-Ax-8Q8">
                                <rect key="frame" x="197" y="298" width="20" height="20"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="20" id="0Uy-7C-Y6E"/>
                                    <constraint firstAttribute="width" constant="20" id="ho8-u4-hnT"/>
                                </constraints>
                            </activityIndicatorView>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <constraints>
                            <constraint firstItem="TAH-5n-Inw" firstAttribute="top" secondItem="mV2-uO-dre" secondAttribute="bottom" constant="86" id="BUd-GR-AJM"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Mdl-Sy-ezF" secondAttribute="trailing" constant="39" id="DmP-Ka-Jsw"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="rJy-I5-ThG" secondAttribute="trailing" constant="39" id="Iim-lc-9Jc"/>
                            <constraint firstItem="973-Ax-8Q8" firstAttribute="top" secondItem="mV2-uO-dre" secondAttribute="bottom" constant="35" id="Rhz-WI-0pf"/>
                            <constraint firstItem="rJy-I5-ThG" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="123" id="Uta-NI-RzF"/>
                            <constraint firstItem="rJy-I5-ThG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="XFT-wy-nRo"/>
                            <constraint firstItem="TAH-5n-Inw" firstAttribute="centerX" secondItem="mV2-uO-dre" secondAttribute="centerX" id="YnQ-PI-JQb"/>
                            <constraint firstItem="rJy-I5-ThG" firstAttribute="width" secondItem="mV2-uO-dre" secondAttribute="width" id="fsf-bE-qCQ"/>
                            <constraint firstItem="973-Ax-8Q8" firstAttribute="centerX" secondItem="mV2-uO-dre" secondAttribute="centerX" id="gqf-yu-cJq"/>
                            <constraint firstItem="Mdl-Sy-ezF" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="guf-uI-gad"/>
                            <constraint firstItem="mV2-uO-dre" firstAttribute="top" secondItem="rJy-I5-ThG" secondAttribute="bottom" constant="28" id="kui-N0-Dd8"/>
                            <constraint firstItem="rJy-I5-ThG" firstAttribute="centerX" secondItem="mV2-uO-dre" secondAttribute="centerX" id="rKO-rm-DRR"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <connections>
                        <outlet property="buttonLogin" destination="TAH-5n-Inw" id="5US-KK-AEQ"/>
                        <outlet property="changeLanguageButton" destination="Mdl-Sy-ezF" id="3Wn-92-NTV"/>
                        <outlet property="loadingIndicator" destination="973-Ax-8Q8" id="Kez-0t-ntA"/>
                        <outlet property="loginTextField" destination="rJy-I5-ThG" id="4YF-Eg-mK7"/>
                        <outlet property="passwordTextField" destination="mV2-uO-dre" id="YWx-fq-R36"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="137.68115942028987" y="117.85714285714285"/>
        </scene>
    </scenes>
</document>
